@@ -602,6 +602,9 @@ jsp.mydspace.in-archive.title                                   = Submission Arc
 jsp.mydspace.main.authoring                                     = Authoring
 jsp.mydspace.main.elem1                                         = Title
 jsp.mydspace.main.elem2                                         = Submitted to
+jsp.mydspace.main.export.archive.title                          = Export file
+jsp.mydspace.main.export.error.title                            = Error with export
+jsp.mydspace.main.export.error.toolarge                         = The overall size of this export is too large.  Please contact your administrator for more information.
 jsp.mydspace.main.heading2                                      = Owned Tasks
 jsp.mydspace.main.heading3                                      = Tasks in the Pool
 jsp.mydspace.main.heading4                                      = Unfinished Submissions
@@ -660,6 +663,9 @@ jsp.mydspace.remove-item.title                                  = Remove Item
 jsp.mydspace.request.export.community                           = Export Community
 jsp.mydspace.request.export.collection                          = Export Collection
 jsp.mydspace.request.export.item                                = Export Item
+jsp.mydspace.request.export.migratecommunity                    = Export (migrate) Community
+jsp.mydspace.request.export.migratecollection                   = Export (migrate) Collection
+jsp.mydspace.request.export.migrateitem                         = Export (migrate) Item
 jsp.mydspace.subscriptions.info1                                = Your subscriptions have been updated.
 jsp.mydspace.subscriptions.info2                                = To subscribe to a collection, visit the collection's home page, and click on the "Subscribe" button.
 jsp.mydspace.subscriptions.info3                                = Below are the collections you are subscribed to.  You will be sent an e-mail each day detailing new items that have become available in these collections.  On days that no new items have appeared, no e-mail will be sent.
