@@ -1,0 +1,66 @@
+<%--
+  - export-error.jsp
+  -
+  - Version: $Revision$
+  -
+  - Date: $Date$
+  -
+  - Copyright (c) 2009, Hewlett-Packard Company and Massachusetts
+  - Institute of Technology.  All rights reserved.
+  -
+  - Redistribution and use in source and binary forms, with or without
+  - modification, are permitted provided that the following conditions are
+  - met:
+  -
+  - - Redistributions of source code must retain the above copyright
+  - notice, this list of conditions and the following disclaimer.
+  -
+  - - Redistributions in binary form must reproduce the above copyright
+  - notice, this list of conditions and the following disclaimer in the
+  - documentation and/or other materials provided with the distribution.
+  -
+  - - Neither the name of the Hewlett-Packard Company nor the name of the
+  - Massachusetts Institute of Technology nor the names of their
+  - contributors may be used to endorse or promote products derived from
+  - this software without specific prior written permission.
+  -
+  - THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+  - ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+  - LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+  - A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+  - HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+  - INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+  - BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
+  - OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+  - ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
+  - TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
+  - USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+  - DAMAGE.
+  --%>
+
+<%--
+  - Error page when an export has failed
+  --%>
+
+<%@ page contentType="text/html;charset=UTF-8" %>
+
+<%@ taglib uri="http://java.sun.com/jsp/jstl/fmt"
+    prefix="fmt" %>
+
+<%@ taglib uri="http://www.dspace.org/dspace-tags.tld" prefix="dspace" %>
+
+<dspace:layout locbar="link"
+               parentlink="/mydspace"
+               parenttitlekey="jsp.mydspace"
+               title="jsp.mydspace.main.export.error.title">
+
+<%-- <h1>Thank You</h1> --%>
+<h1><fmt:message key="jsp.mydspace.main.export.error.title"/></h1>
+
+    <%-- <p>The task is complete, and notification has been sent to the appropriate people.</p> --%>
+    <p><fmt:message key="jsp.mydspace.main.export.error.toolarge"/></p>
+ 
+    <%-- <p align="center"><a href="<%= request.getContextPath() %>/mydspace">Return to My DSpace </a></p> --%>
+    <p align="center"><a href="<%= request.getContextPath() %>/mydspace"><fmt:message key="jsp.mydspace.general.returnto-mydspace"/> </a></p>
+ 
+</dspace:layout>
